--- a/junnu/ex.html
+++ b/junnu/ex.html
@@ -14,7 +14,8 @@ for ( i = 1; i <= num; i++)
       
     n1 = n2; // assign the n2 value into n2  
     n2 = next_num; // assign the next_num into n2  
-}  
+} 
+  <p1/> adding a paragraph <p/>
   
 </script>  
 </body>  
